--- a/src/frontend/css/obras.css
+++ b/src/frontend/css/obras.css
@@ -1,3 +1,39 @@
 body{
     background-color: orange;
 }
+
+.noPadding{
+    padding: 0;
+    border: 0;
+    font-size: 0;
+    
+}
+
+.tituloObra{
+    font-size: 2vh;
+    color: white;
+    padding: 0;
+    border: 0;
+    margin-bottom: 3%;
+    margin-top: 2%;
+    font-weight: bold;
+}
+
+.detalhesObra{
+    font-size: 1.5vh;
+    color: white;
+    padding: 0;
+    border: 0;
+    margin-bottom: 2%;
+    margin-top: 1%;
+}
+
+.green{
+    background-color: green;
+}
+
+.card{
+    width: 60%;
+    height: 100%;
+    margin: auto;
+}
