arrumando detalhes de espacamento n apagina de obras

--- a/src/frontend/css/obras.css
+++ b/src/frontend/css/obras.css
@@ -38,6 +38,21 @@ body{
     margin: auto;
 }
 
-#nomesDasObras{
-    height: 78vh;
+.textoFiltros{
+    padding: 0;
+    border: 0;
+    margin: 0;
 }
+
+#nomesDasObras{
+    margin-top: 3vh;
+    height: 88vh;
+}
+
+#divFiltros{
+    display: flexbox;
+    padding: 0;
+    border: 0;
+    margin: 0;
+}
+
