--- a/src/frontend/css/obras.css
+++ b/src/frontend/css/obras.css
@@ -1,5 +1,6 @@
 body{
-    background-color: orange;
+    background-color: white;
+    width: 100vw;
 }
 
 .noPadding{
@@ -24,7 +25,7 @@ body{
     color: white;
     padding: 0;
     border: 0;
-    margin-bottom: 2%;
+    margin-bottom: 0.5%;
     margin-top: 1%;
 }
 
@@ -34,7 +35,6 @@ body{
 
 .card{
     width: 60%;
-    height: 100%;
     margin: auto;
 }
 
@@ -44,15 +44,20 @@ body{
     margin: 0;
 }
 
+.linkIndecorado{
+    text-decoration: none;
+}
+
 #nomesDasObras{
-    margin-top: 3vh;
-    height: 88vh;
+    margin-top: 0vh;
+    height: 82vh;
 }
 
 #divFiltros{
     display: flexbox;
-    padding: 0;
+    padding-bottom: 5vh;
+    padding-top: 5vh;
     border: 0;
     margin: 0;
+    background-color: green;
 }
-
