Arrumando mais caminhos :)

--- a/src/frontend/css/comoFunciona.css
+++ b/src/frontend/css/comoFunciona.css
@@ -52,8 +52,8 @@ a.active,a:hover{
     padding: 0%;
 }
 
-.accordion {
-    --#{$prefix}accordion-color: #079D56;
+.accordion-button {
+    background-color: #079D56;
 }
 
 #head {
