--- a/src/frontend/css/obras.css
+++ b/src/frontend/css/obras.css
@@ -1,6 +1,7 @@
 body{
     background-color: white;
-    width: 98.7vw;
+    width: 100vw;
+    font-family: Verdana;
 }
 
 .noPadding{
@@ -39,6 +40,7 @@ body{
 }
 
 .textoFiltros{
+    font-family: Verdana;
     padding: 0;
     border: 0;
     margin: 0;
@@ -46,6 +48,10 @@ body{
 
 .linkIndecorado{
     text-decoration: none;
+}
+
+.labelFiltros{
+    color: white;
 }
 
 
