Atualizando os comentários dos arquivos .html e .css

--- a/src/frontend/css/home&meuPerfil.css
+++ b/src/frontend/css/home&meuPerfil.css
@@ -1,3 +1,5 @@
+/* Aqui busca-se estilizar de forma agradável e intuitiva uma espécie de cabeçalho com as informações da Empreiteira, colocando todas as tags centralizadas como desejado, arredondamentos e cores de fundo */
+
 #informacoes img {
     margin-top: 8%;
     width: 100%;
