--- a/src/frontend/css/cssJoao.css
+++ b/src/frontend/css/cssJoao.css
@@ -1,4 +1,8 @@
 /* Estiliza todos os elementos do documento */
+body{
+    padding-bottom: 1%;
+}
+
 *{
     padding:0;
     margin:0;
@@ -90,11 +94,11 @@ nav ul li a{
 /* Botao de candidatar-se*/
 .btn{
     font-family: 'Times New Roman', Times, serif;
-    margin-left: 30%;
     font-size: 100%;
     background-color: #079D56;
     border-radius: 4px;
     padding:8px;
+    margin-bottom:5%;
 }
 /*Divisoria onde vao ficar os serviços */
 .servicos{
@@ -144,3 +148,17 @@ nav ul li a{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.tituloServico{
+    color: black;
+}
+
+.divCentralizadora{
+    padding:2%;
+    text-align: center;
+
+}
+
+img{
+    height: 50%;
+    width: 50%;
+}
