--- a/src/frontend/css/pageCadastro.css
+++ b/src/frontend/css/pageCadastro.css
@@ -39,23 +39,32 @@ body{
   margin: 0 0 30px 0;
 }
 
+/* Proibe o scroll down na parte exterior do form */
 .container .form-outer{
   width: 100%;
   overflow: hidden;
 }
+
+/* Define o tamanho horizontal da página em 400% para caber todas as 4 etapas do form (agora só tem 3) */
 .container .form-outer form{
   display: flex;
   width: 400%;
 }
+
+/* Define a transição de etapa para a outra */
 .form-outer form .page{
   width: 25%;
   transition: margin-left 0.3s ease-in-out;
 }
+
+/* Estiliza o título da página */
 .form-outer form .page .title{
   text-align: left;
   font-size: 25px;
   font-weight: 500;
 }
+
+/* Estiliza os campos das páginas */
 .form-outer form .page .field{
   width: 330px;
   height: 45px;
@@ -63,11 +72,15 @@ body{
   display: flex;
   position: relative;
 }
+
+/* Estiliza os labels dos campos */
 form .page .field .label{
   position: absolute;
   top: -30px;
   font-weight: 500;
 }
+
+/* Estiliza os inputs */
 form .page .field input{
   height: 100%;
   width: 100%;
@@ -76,12 +89,16 @@ form .page .field input{
   padding-left: 15px;
   font-size: 18px;
 }
+
+/* Estiliza os selects */
 form .page .field select{
   width: 100%;
   padding-left: 10px;
   font-size: 17px;
   font-weight: 500;
 }
+
+/* Estiliza os botões */
 form .page .field button{
   width: 100%;
   height: calc(100% + 5px);
@@ -97,6 +114,8 @@ form .page .field button{
   text-transform: uppercase;
   transition: 0.5s ease;
 }
+
+/* Diversas definições sobre os botões */
 form .page .field button:hover{
   background: #000;
 }
@@ -110,6 +129,8 @@ form .page .btns button.prev{
 form .page .btns button.next{
   margin-left: 3px;
 }
+
+/* Diversas definições sobre a progress bar */
 .container .progress-bar{
   display: flex;
   margin: 40px 0;
