--- a/src/frontend/css/home.css
+++ b/src/frontend/css/home.css
@@ -175,14 +175,14 @@ cursor: pointer;
 .menuNavbarGrande{
     display:none;
     align-items: center;
-    height:80px;
+    height:1px;
 
     width: 60%;
 }
 
 .menuNavbarGrande a{
-
-    color:white;
+    user-select: none;
+    color:whitesmoke;
     text-decoration: none;
     transition: 0.6s;
     margin-left:20%;
