--- a/src/frontend/css/adminServicos.css
+++ b/src/frontend/css/adminServicos.css
@@ -100,6 +100,10 @@ table img {
 }
 
 #imgConcluir {
+    width: 28% !important;
+}
+
+#imgCancelar {
     width: 25% !important;
 }
 
@@ -108,37 +112,3 @@ table img {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.card_servicos {
-    margin-left: 7%;
-}
-
-.card_servicos h3 {
-    font-size: 80%;
-}
-
-.card_servicos p {
-    font-size: 60%;
-
-}
-
-.icon_feedback {
-    width: 80%;
-}
-
-#adicionaCard {
-    margin-top: 5%;
-}
