Aprimorando telas de Admin

--- a/src/frontend/css/homeAdmin.css
+++ b/src/frontend/css/homeAdmin.css
@@ -103,6 +103,10 @@ table img {
     width: 25% !important;
 }
 
+#imgServicos {
+    width: 15%;
+}
+
 #servicos:hover {
     background-color: #00000000;
 }
