--- a/src/frontend/css/homeAdmin.css
+++ b/src/frontend/css/homeAdmin.css
@@ -43,20 +43,32 @@ p {
 }
 
 #barra_de_pesquisa {
-    background-color: white;
+    position: relative;
+    background-color: rgb(255, 255, 255);
     margin-top: 2%;
     border: 3px solid black;
 }
 
 #inputPesquisa {
+    width: 100%;
     height: 100%;
     border-style: none;
 }
 
-#inputPesquisa:press {
-    border-style: none !important;
+#inputPesquisa:focus {
+    border-style: none;
     box-shadow: 0 0 0 0;
     border: 0px;
+}
+
+#barra_de_pesquisa ion-icon {
+    position: absolute;
+
+    font-size: 20px;
+    top: 2px;
+    right: 10px;
+    z-index: 1;
+    cursor: pointer;
 }
 
 #barra_de_pesquisa p {
