--- a/src/frontend/css/inserir.css
+++ b/src/frontend/css/inserir.css
@@ -8,10 +8,10 @@
 
 }
 
-.forms {
-    align-items: center;
-}
 
+/* .container{
+    background: #fff;
+} */
 
  /*Navbar*/
 nav{
@@ -155,6 +155,23 @@ display:none;
     margin-left: 65px;
 
 }
+
+form {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    margin-top: 3% !important;
+}
+
+h2 {
+    text-align: left;
+}
+
+.input {
+    width: 10%;
+    margin-left: 41%;
+}
+
 
 /* Responsividade PC/Celular/Tablet*/
 @media (min-width:1100px){
