--- a/src/frontend/css/meuPerfil.css
+++ b/src/frontend/css/meuPerfil.css
@@ -18,9 +18,11 @@ body {
 /* O objetivo do estilo a seguir é setar a cor de fundo, a largura da div e um margin para centralizá-la*/
 
 #retangulo_Maior {
-    background-color: rgb(243, 246, 250);
+    background-color: rgb(243, 250, 245);
     width: 90%;
     margin-left: 5%;
+    padding-bottom: 0.01%;
+    margin-bottom: 5%;
     /* margin-top: 5%; */
     /* margin-bottom: 5%; */
 }
