--- a/src/frontend/css/adminServicos.css
+++ b/src/frontend/css/adminServicos.css
@@ -10,8 +10,10 @@ body {
     padding: 0%;
 }
 
+
 #primeira_linha {
     margin-bottom: 3%;
+    margin-top: 3%;
 }
 
 #Meus_Projetos {
@@ -43,26 +45,51 @@ p {
 }
 
 #barra_de_pesquisa {
-    background-color: white;
-    margin-top: 2%;
-    border: 3px solid black;
+    position: relative;
+    background-color: rgb(255, 255, 255);
 }
 
 #inputPesquisa {
+    width: 100%;
     height: 100%;
-    border-style: none;
+    padding: 10px;
+    border: 3px solid black;
 }
 
-#inputPesquisa:press {
-    border-style: none !important;
-    box-shadow: 0 0 0 0;
-    border: 0px;
+#filtro {
+    margin-left: 8%;
+}
+
+
+#barra_de_pesquisa ion-icon {
+    position: absolute;
+    font-size: 20px;
+    top: 25%;
+    right: 10%;
+    z-index: 1;
+    cursor: pointer;
 }
 
 #barra_de_pesquisa p {
     margin-bottom: 2%;
     margin-top: 2%;
 }
+
+select {
+    padding: 10px;
+
+}
+
+#botaoFiltrar {
+    border: none;
+    border-radius: 5%;
+    margin-left: 5px;
+    background-color: #FFB719;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    padding: 10px;
+}
+
 
 #botao_adiciona_obra {
     background-color: #00D38D;
