--- a/src/frontend/css/homeAdmin.css
+++ b/src/frontend/css/homeAdmin.css
@@ -12,6 +12,7 @@ body {
 
 #primeira_linha {
     margin-bottom: 3%;
+    margin-top: 3%;
 }
 
 #Meus_Projetos {
@@ -45,28 +46,25 @@ p {
 #barra_de_pesquisa {
     position: relative;
     background-color: rgb(255, 255, 255);
-    margin-top: 2%;
-    border: 3px solid black;
 }
 
 #inputPesquisa {
     width: 100%;
     height: 100%;
-    border-style: none;
+    padding: 10px;
+    border: 3px solid black;
 }
 
-#inputPesquisa:focus {
-    border-style: none;
-    box-shadow: 0 0 0 0;
-    border: 0px;
+#filtro {
+    margin-left: 8%;
 }
+
 
 #barra_de_pesquisa ion-icon {
     position: absolute;
-
     font-size: 20px;
-    top: 2px;
-    right: 10px;
+    top: 25%;
+    right: 10%;
     z-index: 1;
     cursor: pointer;
 }
@@ -76,12 +74,19 @@ p {
     margin-top: 2%;
 }
 
+select {
+    padding: 10px;
+
+}
+
 #botaoFiltrar {
     border: none;
     border-radius: 5%;
-    padding: 0%;
+    margin-left: 5px;
     background-color: #FFB719;
     color: rgb(0, 0, 0);
+    font-size: 15px;
+    padding: 10px;
 }
 
 #botao_adiciona_obra {
