--- a/src/frontend/css/inserir.css
+++ b/src/frontend/css/inserir.css
@@ -161,6 +161,7 @@ form {
     justify-content: center;
     align-items: center; */
     margin-top: 3% !important;
+    margin-bottom: 2%;
 }
 
 h2 {
