--- a/src/frontend/css/login.css
+++ b/src/frontend/css/login.css
@@ -7,6 +7,7 @@ body{
     font-family: 'Noto-Sans', sans-serif;
     height: 100vh;
     overflow: hidden;
+    
 }
 
 /* Estiliza todos os elementos do documento */
@@ -22,7 +23,7 @@ body{
 .login{
     width: 100vw;
     height: 100vh;
-    background-color:aliceblue;
+    background-color:rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
