Consertando os insere e edita Obras e Servicos, alem do adminServicos

--- a/src/frontend/css/editarServico.css
+++ b/src/frontend/css/editarServico.css
@@ -1,7 +1,7 @@
 form {
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     margin-top: 3% !important;
 }
 
