--- a/src/frontend/css/pageCadastro.css
+++ b/src/frontend/css/pageCadastro.css
@@ -54,6 +54,7 @@ body{
 /* Define a transição de etapa para a outra */
 .form-outer form .page{
   width: 25%;
+
   transition: margin-left 0.3s ease-in-out;
 }
 
@@ -83,11 +84,12 @@ form .page .field .label{
 /* Estiliza os inputs */
 form .page .field input{
   height: 100%;
-  width: 100%;
+  width: 60%;
   border: 1px solid lightgrey;
   border-radius: 5px;
   padding-left: 15px;
   font-size: 18px;
+  
 }
 
 /* Estiliza os selects */
@@ -97,10 +99,16 @@ form .page .field select{
   font-size: 17px;
   font-weight: 500;
 }
-
+.btnCancelar{
+  background-color: lightcoral;
+  color:rgb(24, 23, 23);
+  padding:3%;
+  border-radius: 6px;
+  
+}
 /* Estiliza os botões */
 form .page .field button{
-  width: 100%;
+  width: 60%;
   height: calc(100% + 5px);
   border: none;
   background: #00cc00;
@@ -209,4 +217,9 @@ form .page .btns button.next{
 .progress-bar .step .check.active{
   display: block;
   color: #fff;
+}
+
+.page.slide-page.sumido{
+
+  margin-left: 50%;
 }
