--- a/src/frontend/css/obras.css
+++ b/src/frontend/css/obras.css
@@ -6,6 +6,17 @@ body{
     height: 100%;
     overflow: hidden;
 }
+.botao{
+
+    border: none;
+    border-radius: 5%;
+    margin-left: 5px;
+    background-color: #FFB719;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    padding: 10px;
+
+}
 
 /* Serve para remover o padding e border de elementos */
 .noPadding{
