--- a/src/frontend/css/pageCadastro.css
+++ b/src/frontend/css/pageCadastro.css
@@ -14,7 +14,7 @@ body{
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-
+  overflow: hidden;
   background-image: linear-gradient(to bottom, rgba(0, 107, 63, 0.9), rgba(7, 157, 86, 1));;
 }
 
@@ -30,7 +30,7 @@ body{
   background: #fff;
   text-align: center;
   border-radius: 5px;
-  padding: 50px 35px 10px 35px;
+  padding: 15px 35px 10px 35px;
 }
 /*Serve para escolher o tamanho do cabeçalho */
 .container header{
@@ -107,9 +107,11 @@ form .page .field select{
   border:none;
   background: none;
   margin-left: 90%;
-  margin-bottom: 10%;
   border:solid rgb(46, 44, 44);
-  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 80%;
   border-width: 1px;
 }
 .btnSair span{
