--- a/src/frontend/css/cssNavbar.css
+++ b/src/frontend/css/cssNavbar.css
@@ -147,7 +147,7 @@ display:none;
 
 /* Foto Do Logo na NavBar */
 #fotoLogo{
-    width: 15%;
+    width: 40%;
     margin-left: 65px;
 
 }
@@ -159,6 +159,11 @@ display:none;
     }
     .menuNavbarGrande{
         display:flex;
+    }
+    #fotoLogo{
+        width: 15%;
+        margin-left: 30px;
+    
     }
 }
 
